--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^20.1.0",
+    "@angular/animations": "^20.1.4",
+    "@angular/common": "^20.1.4",
     "@angular/compiler": "^20.1.0",
-    "@angular/core": "^20.1.0",
+    "@angular/core": "^20.1.4",
     "@angular/fire": "^20.0.1",
-    "@angular/forms": "^20.1.0",
-    "@angular/platform-browser": "^20.1.0",
-    "@angular/router": "^20.1.0",
+    "@angular/forms": "^20.1.4",
+    "@angular/platform-browser": "^20.1.4",
+    "@angular/platform-browser-dynamic": "^20.1.4",
+    "@angular/router": "^20.1.4",
     "@ngneat/tailwind": "^7.0.3",
+    "@types/firebase": "^2.4.32",
     "firebase": "^11.10.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
