added assets folder

--- a/angular.json
+++ b/angular.json
@@ -19,6 +19,8 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/assets",
+              "src/favicon.ico",
               {
                 "glob": "**/*",
                 "input": "public"
@@ -26,7 +28,6 @@
             ],
             "styles": [
               "src/styles.css"
-         
             ]
           },
           "configurations": {
@@ -77,6 +78,8 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
+              "src/assets",
+              "src/favicon.ico",
               {
                 "glob": "**/*",
                 "input": "public"
@@ -84,7 +87,6 @@
             ],
             "styles": [
               "src/styles.css"
-
             ]
           }
         }
