--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ngneat/tailwind": "^7.0.3",
     "@types/firebase": "^2.4.32",
     "firebase": "^11.10.0",
+    "firebase-admin": "^13.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
