--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser-dynamic": "^20.1.4",
     "@angular/router": "^20.1.4",
     "@ngneat/tailwind": "^7.0.3",
+    "@ngx-env/builder": "^20.1.1",
     "@types/firebase": "^2.4.32",
     "firebase": "^11.10.0",
     "firebase-admin": "^13.4.0",
@@ -42,6 +43,7 @@
     "@angular/cli": "^20.1.3",
     "@angular/compiler-cli": "^20.1.0",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^24.3.0",
     "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
